--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -13,7 +13,7 @@
                  
                 <div id="play-video-container" style="width:854px;min-height:480px;max-height:720px" class="d-flex align-items-center justify-content-center">
                             <div id="player-waiting"><h1>Waiting for Camera</h1></div>
-                            <video id="player-video" autoplay playsinline muted controls></video>
+                            <video id="player-video" autoplay playsinline muted controls style="display:none"></video>
                         </div>
             </td>
             <td valign="top">
