--- a/STSEval/app/templates/app/ejudge.html
+++ b/STSEval/app/templates/app/ejudge.html
@@ -199,7 +199,7 @@
             data: {
                 'routine': RoutineID,
                 'judge': ej,
-                'width': $("#divDotsArea").width(),
+                'width': Math.round($("#divDotsArea").width()),
                 'dot_size': DotSize,
             },
             success: function (data) {
