--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -254,7 +254,10 @@
         RoutineID = LoadRot;
         $("#video-playback").show();
         $("#play-video-container").hide();
+        $("#play-video-container").removeClass("d-flex");
         LoadRoutine();
+       // console.log("hide stuff");
+        // $("#play-video-container").hide();
     }
 
    
