--- a/STSEval/app/templates/app/d1.html
+++ b/STSEval/app/templates/app/d1.html
@@ -23,7 +23,7 @@
 	            <tr>
                     <td colspan="2">
                         <!--<div id="divTwitchPlayer" style="width:854px;height:480px"></div>-->
-	                    <video id="video-playback"  style="width:854px;min-height:480px;max-height:720px;display:none" muted controls webkit-playsinline onclick="PlayerClick()">
+	                    <video id="video-playback"  style="width:854px;min-height:480px;max-height:720px;display:none" muted controls webkit-playsinline>
 		                    Your browser does not support the video tag.
 	                    </video>
 
@@ -223,7 +223,18 @@
     var RoutineID;
     var db = firebase.firestore();
    
+    $( "#video-playback" ).click(function(e) {
+        e.preventDefault(); // <=====================
+        if (document.getElementById('video-playback').paused)
+            document.getElementById('video-playback').play();
+        else
+            document.getElementById('video-playback').pause();
+    });
+    function PlayerClick() {
 
+        //console.log("paused: " + document.getElementById('video-playback').paused);
+        
+    }
     SetupPage();
     if (LoadRot == '') {
         SetupStream();
@@ -347,13 +358,7 @@
         }
     }
 
-    function PlayerClick() {
-        //console.log("paused: " + document.getElementById('video-playback').paused);
-        if (document.getElementById('video-playback').paused)
-            document.getElementById('video-playback').play();
-        else
-            document.getElementById('video-playback').pause();
-    }
+    
 
     function SetupPage() {
 
