--- a/STSEval/app/templates/app/evideo.html
+++ b/STSEval/app/templates/app/evideo.html
@@ -18,7 +18,7 @@
             </td>
             <td valign="top">
                 <div id="divScoreArea" style="padding-left:15px;padding-top:30px;" >
-                    <table cellspacing="0" cellpadding="0" border="0" style="font-size:0.75rem;width:270px">
+                    <table cellspacing="0" cellpadding="0" border="0" style="font-size:0.75rem">
 	                    <tr><td id="tdElements" align="right">Elements:</td><td><div id="lblElements"></div></td></tr>
 	                    <tr><td id="tdDifficulty" align="right">Base Score:</td><td><div id="lblDifficulty"></div></td></tr>
 	                    <tr><td id="tdGroups" align="right">Groups:</td><td><div id="lblGroups"></div></td></tr>
