--- a/STSEval/app/templates/app/dots_area.html
+++ b/STSEval/app/templates/app/dots_area.html
@@ -3,7 +3,7 @@
     <div id="divVP1" style="border-right:1px solid;position:absolute;left:25%;height:100%;width:1px"></div><div id="divVP2" style="border-right:1px solid;position:absolute;left:50%;height:100%;width:1px"></div><div id="divVP3" style="border-right:1px solid;position:absolute;left:75%;height:100%;width:1px"></div>
 {% endif %}
 {% for deduction in deductions %}
-    <img id='imgDot{{deduction.id}}' src='{% static 'app/images/dots/' %}{{deduction.image}}' width='{{dot_size}}' height='{{dot_size}}' style='position:absolute;top:{{deduction.posy}}px;left:{{deduction.posx}}px;opacity:{{deduction.opacity}}' {% if playback_only == '1' %} onclick='PlayerJump({{deduction.jumppos}});event.stopPropagation();'{% else %} onclick='{% if deduction.opacity == 1 %}ChangeEjury({{deduction.id}});{% endif %}event.stopPropagation();'{% endif %}>
+    <img id='imgDot{{deduction.id}}' src='{% static 'app/images/dots/' %}{{deduction.image}}' width='{{dot_size}}' height='{{dot_size}}' style='position:absolute;top:{{deduction.posy}}px;left:{{deduction.posx}}%;opacity:{{deduction.opacity}}' {% if playback_only == '1' %} onclick='PlayerJump({{deduction.jumppos}});event.stopPropagation();'{% else %} onclick='{% if deduction.opacity == 1 %}ChangeEjury({{deduction.id}});{% endif %}event.stopPropagation();'{% endif %}>
 {% endfor %}
 
 {% if artistry_deductions|length > 0 %}
