--- a/STSEval/app/templates/app/ejudge.html
+++ b/STSEval/app/templates/app/ejudge.html
@@ -201,6 +201,7 @@
                 'judge': ej,
                 'width': Math.round($("#divDotsArea").width()),
                 'dot_size': DotSize,
+                'initial_offset': 22,
             },
             success: function (data) {
                 $("#divDotsArea").empty();
