--- a/STSEval/app/templates/app/manage.html
+++ b/STSEval/app/templates/app/manage.html
@@ -197,6 +197,7 @@
             dataType: 'json',
             success: function (data) {
                 Changed = false;
+                alert("Judges Copied To " + SelectedEvent);
             }
         });
     }
